# sphinx-dynamic-command-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
docs/: conf.py  configuration.md  index.md
examples/: README.md  conf.py  index.rst
examples/_static/: example.css
pypi-demo/: .gitignore  conf.py  index.rst
src/sphinx_dynamic_command/: __init__.py  directive.py
src/sphinx_dynamic_command/static/: sphinx-dynamic-command.js
src/sphinx_dynamic_command_builder/: __init__.py  directive.py
src/sphinx_dynamic_command_builder/static/: sphinx-dynamic-command-builder.css  sphinx-dynamic-command-builder.js
tests/: test_directive.py
