[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sphinx-dynamic-command"
version = "0.1.0"
description = "Interactive command builders for Sphinx documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "sphinx-dynamic-command contributors" },
]
keywords = ["sphinx", "documentation", "directive", "command", "interactive"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Sphinx :: Extension",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Documentation",
  "Topic :: Documentation :: Sphinx",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "PyYAML>=6",
  "Sphinx>=5",
]

[project.optional-dependencies]
docs = [
  "myst-parser>=2",
  "sphinx-book-theme>=1",
]
test = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/your-org/sphinx-dynamic-command"
Issues = "https://github.com/your-org/sphinx-dynamic-command/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sphinx_dynamic_command"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/docs",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
]

